# Human-Safety-Monitoring-System

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  technical_report.aux  technical_report.out  technical_report.tex
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: detect.py  detections.py  health.py  monitoring.py  persons.py  ppe.py  track.py
app/core/: config.py  logging.py  model_download.py
app/schemas/: detection.py  monitoring.py  tracking.py
app/services/: detector.py  safety_monitor.py
app/utils/: storage.py
changelogs/: agent-changelogs.md
scripts/: tracker.py  train-model.py
tests/: conftest.py  test_health.py
